--- a/ExpoPage/templates/CREDITS/index.html
+++ b/ExpoPage/templates/CREDITS/index.html
@@ -34,7 +34,7 @@
             <div class="texts">
                 <h2>
                     Esta pagina ha sido programada desde 
-                    cero por el alumno Francisco Barreneche, 
+                    su inicio por el alumno Francisco Barreneche, 
                     en colaboracion para la expo tecno arte 2022
                 </h2>
             </div>
