--- a/ExpoPage/static/css/LO/LO.css
+++ b/ExpoPage/static/css/LO/LO.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Bebas-Regular';
+    font-family: 'cubic';
     background-color: rgb(86, 155, 172);
     /* background-color: rgb(72, 150, 72); */
     /* background-color: white; */
