--- a/ExpoPage/templates/SB/index.html
+++ b/ExpoPage/templates/SB/index.html
@@ -23,12 +23,12 @@
       <h1>Expo tec</h1>
       <a href="/ExpoPage">Inicio</a>
       <a href="/ExpoPage/#2">Datos</a>
-      <a href="#">creditos</a>
+      <a href="templates/CREDITS">creditos</a>
     </nav>
     <!----------->
 
     <div class="baner">
-      <h2>Salvando los Bosques con Tecnologia</h2>
+      <h2>Salvando los Bosques con Tecnología</h2>
     </div>
 
     <div class="content">
