--- a/ExpoPage/static/css/SB/SB.css
+++ b/ExpoPage/static/css/SB/SB.css
@@ -1,5 +1,5 @@
 body{
-    font-family: 'Bebas-Regular';
+    font-family: 'cubic';
     background-color: rgb(172, 142, 86);
     /* background-color: rgb(72, 150, 72); */
     /* background-color: white; */
