--- a/ExpoPage/templates/CREDITS/index.html
+++ b/ExpoPage/templates/CREDITS/index.html
@@ -33,7 +33,7 @@
         <div class="container int">
             <div class="texts">
                 <h2 id="text_1">Esta pagina ha sido programada desde su inicio</h2>
-                <h2 id="text_2">por el alumno Francisco Barreneche,</h2>
+                <h2 id="text_2">por el estudiante Francisco Barreneche,</h2>
                 <h2 id="text_3">en colaboracion para la expo tecno arte 2022</h2>
             </div>
         </div>
