--- a/ExpoPage/templates/LO/index.html
+++ b/ExpoPage/templates/LO/index.html
@@ -23,7 +23,7 @@
       <h1>Expo tec</h1>
       <a href="/ExpoPage">Inicio</a>
       <a href="/ExpoPage/#2">Datos</a>
-      <a href="templates/CREDITS">creditos</a>
+      <a href="/ExpoPage/templates/CREDITS/">creditos</a>
     </nav>
     <!----------->
 
